# Coding_Agent

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  conversations.db  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Codeius-GUI/: TESTING_GUIDE.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
Codeius-GUI/src/: App.css  App.jsx  index.css  main.jsx
docs/: AGENT.md  README.md  cli_commands.md  custom_model_guide.md  quick_start_guide.md  security_guide.md  setup_guide.md  troubleshooting_guide.md  usage_guide.md
docs/agent_components/: action_executor.md  agent.md  conversation_manager.md
docs/cli_components/: cli.md
docs/git_controls/: git_operations.md
docs/gui_components/: git_controls_component.md  gui_components.md  toast_notification_system.md
docs/llm_providers/: google.md  groq.md
docs/mcp_components/: git_server.md  mcp_manager.md
docs/model_components/: model_manager.md
docs/plugin_components/: plugin_manager.md
history/: conversation_20251117_064617_296030.txt  conversation_20251117_065504_565682.txt  conversation_20251117_071801_799520.txt  conversation_20251118_062130_675539.txt  conversation_20251118_070700_261089.txt  conversation_20251120_112329_709595.txt  conversation_20251125_135433_749765.txt  conversation_20251127_130523_515226.txt  conversation_20251201_014034_361832.txt  conversation_20251201_014052_808529.txt  conversation_20251201_014247_702083.txt  conversation_20251201_020052_632355.txt
plugins/: logger_plugin.py
tests/: test_agent.py  test_visualizations.py
(+167 files in other folders)
